# trash-dection-agent

./: .gitignore  .sops.yaml  README.md  config.yaml  env.yaml  pyproject.toml  server.py  setup.py
core/: __init__.py  llm_intent.py  price_crawler.py  report_generator.py  trash_detection.py  voice_interact.py
prompts/: intent_prompt.py  prompt_templates.py  reply_prompt.py
resources/: price_cache_resource.py  trash_model_resource.py
tools/: detect_trash_tool.py  get_price_tool.py  intent_recognize_tool.py  voice_tool.py
ui/: __init__.py  chat_voice_llm_agent.py
